--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "dependencies": {
     "apollo-boost": "^0.1.10",
     "axios": "^0.18.0",
+    "dotenv": "^6.1.0",
+    "express-session": "^1.15.6",
     "graphql": "^0.13.2",
-    "graphql-yoga": "^1.14.12",
+    "graphql-yoga": "^1.16.7",
+    "massive": "^5.5.1",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
     "react-dom": "^16.3.2",
@@ -17,5 +22,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "nodemonConfig": {
+    "watch": [
+      "server/*",
+      "db/*",
+      ".env"
+    ],
+    "delay": "2500"
+  },
+  "proxy": "http://localhost:3001"
 }
